--- a/appspec.json
+++ b/appspec.json
@@ -1,30 +1,57 @@
 {
   "settings": [
     {
-      "id": "sdk",
-      "name": "The name of the MoveApps SDK",
-      "description": "Showcase requesting a string input from the users of your app.",
-      "defaultValue": "MoveApps SDK",
+      "id": "time_col",
+      "name": "Name of the time column",
+      "description": "Indicate which column to use as the timestamp column for the transformation of the table data to a move2 object. Take care to enter the name in the correct spelling, see the data summary of the preceding App.",
+      "defaultValue": "timestamp",
       "type": "STRING"
     },
     {
-      "id": "year",
-      "name": "The year",
-      "description": "Insert description for the year setting setting",
-      "defaultValue": 2022,
-      "type": "INTEGER"
+      "id": "track_id_col",
+      "name": "Name of the track ID column",
+      "description": "Indicate which column to use as the track ID column for transforamtion of the table data to a move2 object. Take care that duplicated timestamps in a track are not allowed. Beware of possible issues if you have reused tags on different animals or used several tags on the same animal. Then, the use of deployment.id, as in the default, can be useful. Else, individual.local.identifier might be preferred. Take care to enter the attributes' names in the correct spelling, see the data summary of the preceding App.",
+      "defaultValue": "deployment.id",
+      "type": "STRING"
     },
-    {
-      "id": "yourLocalFileSettingId",
-      "name": "Personalization",
-      "description": "You can personalize the dashboard by providing a file named 'sample.txt'",
+	    {
+      "id": "track_attr",
+      "name": "Name of the attributes to become track attributes",
+      "description": "List which of the attributes are pure track attributes, i.e. have only one value per track. This will make working with the data easier in subsequent Apps. Take care to enter the attributes' names in the correct spelling, see the data summary of the preceding App. The names must be separated with comma.",
+      "defaultValue": "",
+      "type": "STRING"
+    },
+	    {
+      "id": "coords",
+      "name": "Names of the longigute and latitute columns.",
+      "description": "Provide the names of the two (or three) coordinate columns in your data for correct transformation to a move2 object. The order must be x/longitude followed by y/latitute and optionally z/height. Take care to enter the attributes' names in the correct spelling, see the data summary of the preceding App. The names must be separated with comma.",
+      "defaultValue": "location.long, location.lat",
+      "type": "STRING"
+    },
+	    {
+      "id": "crss",
+      "name": "Coordinate reference system.",
+      "description": "Enter the coordinate reference system/ projection to use, either as character, number (EPSG) or a crs object.",
+      "defaultValue": "WGS84",
+      "type": "STRING"
+    },
+	    {
+      "id": "csvFile_ID",
+      "name": "Tracking data in csv format.",
+      "description": "Please upload tracking data in a comma-separated csv file, called 'data.csv'. Attribute names of key properties can be indicated in the settings above. Please take care to adapt them.",
+      "type": "LOCAL_FILE"
+    },
+	    {
+      "id": "rdsFile_ID",
+      "name": "Tracking data in rds format.",
+      "description": "Please upload moveStack or move2 object tracking data in the strongly compressed rds file type, called 'data.rds'. Attribute names as indicated above will not be used, but taken from the file.",
       "type": "LOCAL_FILE"
     }
   ],
   "dependencies": {
     "R": [
       {
-        "name": "lubridate"
+        "name": "move"
       },
       {
         "name": "move2"
@@ -34,8 +61,12 @@
   "createsArtifacts": true,
   "providedAppFiles": [
     {
-      "settingId": "yourLocalFileSettingId",
-      "from": "data/local_app_files/provided-app-files/yourLocalFileSettingId/"
+      "settingId": "csvFile_ID",
+      "from": "data/local_app_files/provided-app-files/csvFile_ID/"
+    },
+	{
+      "settingId": "rdsFile_ID",
+      "from": "data/local_app_files/provided-app-files/rdsFile_ID/"
     }
   ],
   "license": {
@@ -43,39 +74,28 @@
   },
   "language": "eng",
   "keywords": [
-    "example",
-    "template"
-  ],
+    "upload",
+    "file",
+	"data access",
+	"rds",
+	"csv"
   "people": [
     {
-      "firstName": "Charles",
+     "firstName": "Andrea",
       "middleInitials": null,
-      "lastName": "Darwin",
-      "email": "creator@example.com",
+      "lastName": "Kölzsch",
+      "email": "akoelzsch@ab.mpg.de",
       "roles": [
         "author",
         "creator"
       ],
-      "orcid": null,
-      "affiliation": null,
-      "affiliationRor": null
-    }
-  ],
-  "funding": [
-    {
-      "name": "funder name",
-      "comment": "grant for App"
-    }
-  ],
-  "references": [
-    {
-      "type": "IsDescribedBy",
-      "note": "Darwin, C. 1900. The creation. Journal XY. 1-2",
-      "url": "https://anylink.xyz"
+      "orcid": "0000-0003-0193-1563",
+      "affiliation": "Max-Planck-Institute of Animal Behavior",
+      "affiliationRor": "https://ror.org/026stee22"
     }
   ],
   "documentation": {
-    "url": "https://github.com/yourAccount/my-app/README.md"
+    "url": "https://github.com/movestore/Upload-File-from-Local/blob/master/README.md"
   }
 }
 
