--- a/appspec.json
+++ b/appspec.json
@@ -11,7 +11,7 @@
       "id": "track_id_col",
       "name": "Name of the track ID column",
       "description": "Indicate which column to use as the track ID column for transforamtion of the table data to a move2 object. Take care that duplicated timestamps in a track are not allowed. Beware of possible issues if you have reused tags on different animals or used several tags on the same animal. Then, the use of deployment.id, as in the default, can be useful. Else, individual.local.identifier might be preferred. Take care to enter the attributes' names in the correct spelling, see the data summary of the preceding App.",
-      "defaultValue": "deployment.id",
+      "defaultValue": "deployment_id",
       "type": "STRING"
     },
 	    {
@@ -25,7 +25,7 @@
       "id": "coords",
       "name": "Names of the longigute and latitute columns.",
       "description": "Provide the names of the two (or three) coordinate columns in your data for correct transformation to a move2 object. The order must be x/longitude followed by y/latitute and optionally z/height. Take care to enter the attributes' names in the correct spelling, see the data summary of the preceding App. The names must be separated with comma.",
-      "defaultValue": "location.long, location.lat",
+      "defaultValue": "location_long, location_lat",
       "type": "STRING"
     },
 	    {
