--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # development settings
 CONFIGURATION_FILE=./app-configuration.json
 PRINT_CONFIGURATION=yes
-SOURCE_FILE=./data/local_app_files/uploaded-app-files/input2.csv
+SOURCE_FILE=./data/raw/data3_move2.rds
 OUTPUT_FILE=./data/output/output.rds
 ERROR_FILE=./data/output/error.log
 APP_ARTIFACTS_DIR=./data/output/
