drop_units in overlapping result columns

--- a/app-configuration.json
+++ b/app-configuration.json
@@ -1,5 +1,5 @@
 {
-    "fileName1": "data2.csv"
+    "fileName1": "data2.csv",
     "time_col": "timestamp",
     "track_id_col": "individual.local.identifier",
     "track_attr": "event.id, comments, sequence.number, tag voltage,transmission.timestamp",
