--- a/app-configuration.json
+++ b/app-configuration.json
@@ -1,8 +1,7 @@
 {
-    "fileName1": "data2.csv",
     "time_col": "timestamp",
     "track_id_col": "individual.local.identifier",
-    "track_attr": "event.id, comments, sequence.number, tag voltage,transmission.timestamp",
+    "track_attr": "taxon.canonical.name,nick.name,sex,tag.id",
     "coords": "location.long,location.lat",
     "crss": 4326
 }
