--- a/app-configuration.json
+++ b/app-configuration.json
@@ -3,5 +3,5 @@
     "track_id_col": "individual-local-identifier",
     "track_attr": "animal_life_stage, deployment_local_identifier, sensor_type_ids, group_id, mortality_type, sex",
     "coords": "location-long, location-lat",
-    "crss": 4326
+    "crss": "EPSG:4978"
 }
