--- a/appspec.json
+++ b/appspec.json
@@ -1,4 +1,6 @@
 {
+  "version": "1.2",
+
   "settings": [
     {
       "id": "time_col",
@@ -31,9 +33,9 @@
 	    {
       "id": "crss",
       "name": "Coordinate reference system.",
-      "description": "Enter the coordinate reference system/ projection to use as a valid numeric EPSG value. For more info see https://epsg.io/ and https://spatialreference.org/.",
-      "defaultValue": 4326,
-      "type": "INTEGER"
+      "description": "Enter the coordinate reference system/ projection to use as a valid EPSG value. For more info see https://epsg.io/ and https://spatialreference.org/.",
+      "defaultValue": "EPSG:4978",
+      "type": "STRING"
     },
     {
       "id": "csvFile_ID",
