--- a/app-configuration.json
+++ b/app-configuration.json
@@ -1,7 +1,7 @@
 {
     "time_col": "timestamp",
-    "track_id_col": "individual-local-identifier",
+    "track_id_col": "individual_local_identifier",
     "track_attr": "animal_life_stage, deployment_local_identifier, sensor_type_ids, group_id, mortality_type, sex",
-    "coords": "location-long, location-lat",
+    "coords": "location_long, location_lat",
     "crss": "EPSG:4978"
 }
